# Sheepnet

./: .gitignore  Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
src/: main.rs
tests/fixtures/: daily_activities.html  weekly_activities.html
